--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "elcontraption/wp-post-inspector",
     "description": "Tools for interacting and inspecting WordPress post objects.",
+    "homepage": "https://github.com/elcontraption/wp-post-inspector",
     "license": "MIT",
     "authors": [
         {
@@ -13,9 +14,12 @@
     "require": {
         "php": ">=5.4.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.5.*"
+    },
     "autoload": {
-        "psr-0": {
-            "PostInspector": "src"
+        "psr-4": {
+            "ElContraption\\PostInspector\\": "src/"
         }
     }
 }
