--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "phpunit/phpunit": "4.5.*"
     },
     "autoload": {
-        "psr-4": {
-            "ElContraption\\PostInspector\\": "src/"
-        }
+        "classmap": [
+            "src/"
+        ]
     }
 }
